# beluga

./: .prettierrc.json  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: mobile.yml  release.yml
definition/: index.html  index.ts
scripts/: icon.js
src/: App.tsx  base.ts  main.css  main.tsx  state.ts  types.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  migrated.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/resources/: entry.js
src-tauri/src/: base.rs  database.rs  error.rs  handlers.rs  lib.rs  main.rs  server.rs  settings.rs  utils.rs
src-tauri/src/model/: book.rs  mod.rs  word.rs
src/components/: BackPage.tsx  PopupWord.css  PopupWord.tsx
src/pages/: Book.module.css  Book.tsx  Home.css  Home.tsx  Settings.css  Settings.tsx  Words.css  Words.module.css  Words.tsx
