[package]
name = "beluga"
version = "0.1.1"
description = "A dictionary application"
default-run = "beluga"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "beluga_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [ "devtools", "tray-icon"] }
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
flate2 = "1.0"
anyhow = "1.0"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
mime_guess = "2.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
beluga-core = { path = "../beluga-core" }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
dirs = "6.0"
xcap = "0.3"
mouse_position = "0.1"
ocrs = "0.10"
rayon = "1.10"
rten = "0.16"
rten-tensor = "0.16"
rten-imageproc = "0.16"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
