[package]
name = "beluga"
version = "0.1.1"
description = "A dictionary application"
default-run = "beluga"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "beluga_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45", features = ["full"] }
tauri = { version = "2", features = [ "devtools", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
flate2 = "1.1"
log = "0.4"
anyhow = "1.0"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
mime_guess = "2.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
beluga-core = { path = "../beluga-core" }

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2"
xcap = "0.5"
mouse_position = "0.1"
ocrs = "0.10"
rayon = "1.10"
rten = "0.16"
rten-tensor = "0.16"
rten-imageproc = "0.16"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
